[motion-1] Check the creation of the stacking context if we don't have offset-path animation and its value is none.
Categories
(Core :: CSS Transitions and Animations, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox72 | --- | fixed |
People
(Reporter: boris, Assigned: boris)
References
Details
Attachments
(3 files)
| Comment hidden (obsolete) |
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Update the title because we would like to land Bug 1429305 first, which fix the stacking context issue, but still has a bug if we have offset-* animations other than offset-path and offset-path is none.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
Note to me:
We should also avoid setting change hint in RestyleManager::AddLayerChangesForAnimation() if we don't have offset-path (and other transform) animations and offset-path is none. Otherwise, we may hit the assertion in ApplyRenderingChangeToTree, if we update nsIFrame::HasAnimationOfTransform() to return false for this case.
| Assignee | ||
Comment 5•6 years ago
|
||
So we don't run animations of offset-* if offset-path is none and we
don't have animations of offset-path.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 7•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/3bfe8e0917c2
https://hg.mozilla.org/mozilla-central/rev/102f2c8d8923